--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -13,7 +13,8 @@
       appearance: none;
     }
     .c-drop-cont{
-      display: show;
+      display: block;
+      visibility: visible;
       position: absolute;
       background-color: none;
       min-width: 160px;
@@ -45,7 +46,7 @@
           </select>
         </form>
         <form action="/userProfile">
-          <!--<select name="studentID" id="tutorDropDown" class="c-drop"onchange="this.form.submit()"> -->
+          <select name="studentID" id="tutorDropDown" class="c-drop"onchange="this.form.submit()"> 
               <option class="c-drop-cont">Select a Tutor</option>
             <% for (var i = 0;i < tutors.length; i++) { %>
               <% console.log(tutors[i].id) %>
