--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -15,6 +15,8 @@
     .c-drop-cont{
       display: block;
       visibility: visible;
+      height: auto !important;
+      opacity: 1 !important;
       position: absolute;
       background-color: none;
       min-width: 160px;
@@ -22,7 +24,6 @@
       color: #C7BA7C;
       padding: 12px 16px;
       text-decoration: none;
-      display: block;
     } 
 
   </style>
