--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -11,6 +11,8 @@
       border: none;
       cursor: pointer;
       appearance: none;
+      height: auto !important;
+      opacity: 1 !important;
     }
     .c-drop-cont{
       display: block;
