--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -13,6 +13,7 @@
       appearance: none;
       height: auto !important;
       opacity: 1 !important;
+      display: block;
     }
     .c-drop-cont{
       display: block;
