--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -11,18 +11,15 @@
       border: none;
       cursor: pointer;
       appearance: none;
-      height: auto !important;
-      opacity: 1 !important;
       display: block;
+      width: 100%;
     }
     .c-drop-cont{
       display: block;
       visibility: visible;
-      height: auto !important;
-      opacity: 1 !important;
       position: absolute;
       background-color: none;
-      min-width: 160px;
+      width: 100%;
       z-index: 1; 
       color: #C7BA7C;
       padding: 12px 16px;
