--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -79,7 +79,7 @@
                 </div>
                 <div class="form-group">
                   <label for="pronouns" class="h6">Preferred Pronouns</label>
-                  <select name="pronouns" class="form-control" id="pronouns" required>
+                  <select name="pronouns" class="form-control" id="pronouns">
                     <option value="">Select Your Pronouns</option>
                     <option value="he">he/him/his</option>
                     <option value="she">she/her/hers</option>
