--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -98,30 +98,8 @@
                   </select>
 
                 </div>
-                <p class="h6">Select Role</p>
-                <div class="form-check form-check-inline">
-                  <input name="studentStatus" class="form-check-input" type="checkbox" id="studentStatus" value="None">
-                  <label class="form-check-label" for="student">Student</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
-                  <label class="form-check-label" for="tutorCheck">Tutor</label>
-                </div>
-                <span class="error"><small id="typeStatus" style="color:red"></small></span>
-                <div class="card card-body" style="display:none;" id="tutorCard">
-                  <div class="form-group" id="tutorForm">
-                    <label for="validationSchool" class="h6">What Year Are You?</label>
-                    <select name="yearStatus" class="form-control" id="yearStatus">
-                      <option value="">Select a Year</option>
-                      <option value="Freshman">Freshman</option>
-                      <option value="Sophomore">Sophomore</option>
-                      <option value="Junior">Junior</option>
-                      <option value="Senior">Senior</option>
-                    </select>
-                    <span class="error"><small id="yearError" style="color:red"></small></span>
-                  </div>
-                  <div class="form-group">
-                    <label for="validationSubject" class="h6">What Subject?</label>
+                 <div class="form-group">
+                    <label for="validationSubject" class="h6">Subject</label>
                     <select name="subjectStatus" class="form-control" id="subjectStatus">
                       <option value="">Select a Subject</option>
                       <option value="Math">Math</option>
@@ -129,22 +107,18 @@
                       <option value="Computer Science">Computer Science</option>
                       <option value="English">English</option>
                     </select>
-                    <span class="error"><small id="subjectError" style="color:red"></small></span>
-                  </div>
-                  <div class="form-group">
-                    <label for="hourlyWage" class="h6">Enter Your Hourly Price</label>
-                    <input name="wage" class="form-control" id="wage" placeholder="$0.00">
+                   
+                
+                <div class="form-group">
+                  <label for="bio" class="h6">Bio</label>
+                  <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
+                </div>
+                  <br>
+                <div class=" form-group">
+                  <div class="mt-3">
+                    <button id="submit_button" type="submit" class="btn btn-dark btn-block">Submit</button>
                   </div>
                 </div>
-                <br>
-                <br>
-                <label for="bio" class="h6">Bio</label>
-                <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
-                <br>
-                <div class="mt-3">
-                  <button id="submit_button" type="submit" class="btn btn-dark btn-block">Submit</button>
-                </div>
-
             </div>
           </div>
         </div>
