--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -20,18 +20,19 @@
       position: absolute;
       background-color: none;
       width: 100%;
-      z-index: 1; 
+      z-index: 1;
       color: #C7BA7C;
       padding: 12px 16px;
       text-decoration: none;
-    } 
+    }
 
   </style>
 </head>
   <body style="background-color:#000000">
     <div class="topnav">
-      <a class="active"href="#Profile">Profile</a>
-      <a class="active"href="#about">About</a>
+      <form action="/Profile">
+        <input type="submit" name="Profile" value="Profile">
+      </form>
     </div>
     <div class="container-fluid">
       <br>
@@ -47,13 +48,13 @@
           </select>
         </form>
         <form action="/userProfile">
-          <select name="studentID" id="tutorDropDown" class="c-drop"onchange="this.form.submit()"> 
+          <select name="studentID" id="tutorDropDown" class="c-drop"onchange="this.form.submit()">
               <option class="c-drop-cont">Select a Tutor</option>
             <% for (var i = 0;i < tutors.length; i++) { %>
               <% console.log(tutors[i].id) %>
-              <option class="c-drop-cont" value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
-            <% } %> 
-            </div> 
+              <option class="c-drop-cont" value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>
+            <% } %>
+            </div>
           </select>
         </form>
       </div>
