--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -25,6 +25,37 @@
       padding: 12px 16px;
       text-decoration: none;
     }
+    .topnav{
+      background-color: #C7BA7C;
+      overflow:hidden;
+    }
+    .topnav a{
+      float:left;
+      color:#000000;
+      text-align: center;
+      padding: 10px 14px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    .topnav a:hover {
+      background-color: #CFbf5C;
+      color: black;
+    }
+    .topnav input{
+      float:left;
+      color:#000000;
+      background-color: #C7BA7C;
+      display: inline-block;
+      text-align: center;
+      padding: 10px 14px;
+      text-decoration: none;
+      font-size: 17px;
+      border: none;
+    }
+    .topnav input:hover {
+      background-color: #CFbf5C;
+      color: black;
+    }
 
   </style>
 </head>
