--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -46,11 +46,8 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav" >
-          <form action="/" >
+          <form action="/Profile" >
             <input type="submit" name="home" value="Home">
-          </form>
-          <form action="/About">
-            <input type="submit" name="About" value="About">
           </form>
         </div>
         <div class="container-fluid">
