last update for nav bar for search page

--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -62,7 +62,7 @@
   <body style="background-color:#000000">
     <div class="topnav">
       <form action="/Profile">
-        <input type="submit" name="Profile" value="Profile">
+        <input type="submit" name="Home" value="Home">
       </form>
     </div>
     <div class="container-fluid">
