--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -195,7 +195,7 @@
             <div class="col-5">
               <div class="card mx-auto" style="width: 23rem;">
                 <p><center><%= user.schoollevel %></center></p>
-                <% if(user.tutor == true){ %>
+                <% if(user.tutor == false){ %>
                 <p><center>Looking for Tutoring In: <%= user.subjects %></center></p>
                 <% } %>
                 <% if(user.tutor == true){ %>
