update for student display

--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -249,6 +249,9 @@
               <% } %>
               </div>
             <% } %>
+              <% if(user.tutor == false) { %>
+                <div class="card-body"><div class="scroll-box">No feedback for Students :( </div></div>
+              <% } >
             </div>
           </div>
         </div>
