--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -46,11 +46,8 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav" >
-          <form action="/" >
+          <form action="/Profile" >
             <input type="submit" name="home" value="Home">
-          </form>
-          <form action="/About">
-            <input type="submit" name="About" value="About">
           </form>
         </div>
         <div class="container-fluid">
@@ -107,8 +104,8 @@
                       <option value="Computer Science">Computer Science</option>
                       <option value="English">English</option>
                     </select>
-                   
-                
+
+
                 <div class="form-group">
                   <label for="bio" class="h6">Bio</label>
                   <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
