--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -46,8 +46,11 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav" >
-          <form action="/Profile" >
+          <form action="/" >
             <input type="submit" name="home" value="Home">
+          </form>
+          <form action="/About">
+            <input type="submit" name="About" value="About">
           </form>
         </div>
         <div class="container-fluid">
@@ -94,6 +97,17 @@
                     <option value="UT - Arlington">UT - Arlington</option>
                   </select>
 
+                <div class="form-group">
+                    <label for="validationSubject" class="h6">Year</label>
+                    <select name="subjectStatus" class="form-control" id="subjectStatus">
+                      <option value="">Select a Year</option>
+                      <option value="Math">Freshmen</option>
+                      <option value="Physics">Sophomore</option>
+                      <option value="Computer Science">Junior</option>
+                      <option value="English">Senior</option>
+                    </select>
+                  </div>
+
                 </div>
                  <div class="form-group">
                     <label for="validationSubject" class="h6">Subject</label>
@@ -104,8 +118,8 @@
                       <option value="Computer Science">Computer Science</option>
                       <option value="English">English</option>
                     </select>
-
-
+                  </div>
+                
                 <div class="form-group">
                   <label for="bio" class="h6">Bio</label>
                   <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
