--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -46,7 +46,7 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav" >
-          <form action="/Profile" >
+          <form action="/profile" >
             <input type="submit" name="home" value="Home">
           </form>
         </div>
