--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -99,7 +99,7 @@
 
                 <div class="form-group">
                     <label for="validationSubject" class="h6">Year</label>
-                    <select name="subjectStatus" class="form-control" id="subjectStatus">
+                    <select name="yearStatus" class="form-control" id="subjectStatus">
                       <option value="">Select a Year</option>
                       <option value="Math">Freshmen</option>
                       <option value="Physics">Sophomore</option>
@@ -119,7 +119,7 @@
                       <option value="English">English</option>
                     </select>
                   </div>
-                
+
                 <div class="form-group">
                   <label for="bio" class="h6">Bio</label>
                   <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
