--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -101,10 +101,10 @@
                     <label for="validationSubject" class="h6">Year</label>
                     <select name="yearStatus" class="form-control" id="subjectStatus">
                       <option value="">Select a Year</option>
-                      <option value="Math">Freshmen</option>
-                      <option value="Physics">Sophomore</option>
-                      <option value="Computer Science">Junior</option>
-                      <option value="English">Senior</option>
+                      <option value="Freshman">Freshman</option>
+                      <option value="Sophomore">Sophomore</option>
+                      <option value="Junior">Junior</option>
+                      <option value="Senior">Senior</option>
                     </select>
                   </div>
 
